Fix overflowing elements, add clamp for fluid fonts, fix stylings and add availability section

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -16,7 +16,7 @@ body {
   /* 4. Improve text rendering */
   -webkit-font-smoothing: antialiased;
 
-  font-size: 62.5%;
+  font-size: 16px;
 }
 
 /* 5. Improve media defaults */
